--- a/01-Modularite/biblio_reseaux.bib
+++ b/01-Modularite/biblio_reseaux.bib
@@ -218,3 +218,23 @@ doi = {https://doi.org/10.1016/B978-0-444-89178-5.50088-9},author = {Teuvo Kohon
   booktitle={The 4th Intensive Study Program
 Of The Neurosciences Research Program} 
 }
+
+
+@article{hagenbuchner_self-organizing_2003,
+	title = {A self-organizing map for adaptive processing of structured data},
+	volume = {14},
+	issn = {1045-9227},
+	url = {http://ieeexplore.ieee.org/document/1199648/},
+	doi = {10.1109/TNN.2003.810735},
+	abstract = {Recent developments in the area of neural networks produced models capable of dealing with structured data. Here, we propose the first fully unsupervised model, namely an extension of traditional self-organizing maps (SOMs), for the processing of labeled directed acyclic graphs (DAGs). The extension is obtained by using the unfolding procedure adopted in recurrent and recursive neural networks, with the replicated neurons in the unfolded network comprising of a full SOM. This approach enables the discovery of similarities among objects including vectors consisting of numerical data. The capabilities of the model are analyzed in detail by utilizing a relatively large data set taken from an artificial benchmark problem involving visual patterns encoded as labeled DAGs. The experimental results demonstrate clearly that the proposed model is capable of exploiting both information conveyed in the labels attached to each node of the input DAGs and information encoded in the DAG topology.},
+	language = {en},
+	number = {3},
+	urldate = {2018-12-10},
+	journal = {IEEE Transactions on Neural Networks},
+	author = {Hagenbuchner, M. and Sperduti, A. and {Ah Chung Tsoi}},
+	month = may,
+	year = {2003},
+	pages = {491--505}
+}
+
+
