--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,3 @@
-
 %Documentclass thesul modifée pour la page de garde : thesul-cs
 \documentclass[11pt]{thesul-cs}
 \usepackage[utf8]{inputenc}
@@ -16,7 +15,6 @@
 
 %mini table of contents
 \usepackage[french]{minitoc}
-
 \usepackage{amssymb}
 \usepackage{xcolor} % où xcolor selon l'installation
 \usepackage{mdframed}
@@ -32,9 +30,11 @@
 \usepackage{array}
 \usepackage{url}
 \usepackage{algorithm2e}
-\SetAlCapSkip{1em}
-\SetKwInput{KwInput}{Input}
-\SetKwInput{KwOutput}{Output}
+%\usepackage{algorithm}
+%\usepackage{algpseudocode}
+%\SetAlCapSkip{1em}
+%\SetKwInput{KwInput}{Input}
+%\SetKwInput{KwOutput}{Output}
 \usepackage{mathtools}
 \DeclareMathOperator{\sign}{sgn}
 \newtheorem{propriete}{Propriété}
@@ -44,9 +44,7 @@
 \newif\ifDraft
 \newcommand\comment[1]{\ifDraft {\itshape\color{red}{#1}} \fi} %text displayed in draft mode as comments
 \newcommand\draft[1]{\ifDraft #1 \fi} %text displayed in draft mode only.
-
 \newif\ifReview
-
 %switch between draftmode and releasemode
 \ifdefined\draftmode
   \Drafttrue
